# scrapybara-backend

./: .env.example  .gitignore  emailData.py  email_database.csv  generatefinal.py  keywords.json  lambda_function.py  main.py  newsletter.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
outputs/category_reports/: creative.json  finance.json  global news.json  sports.json  tech.json  us news.json
scrapybara-newsfinder/: .cursorrules  bias.py  main.py  research_results.json
src/: cleanup_tables.py  generatefinal.ts  import_raw_articles.py  import_topic_analyses.py  synthesizer.ts
